eclipse-workspace/padmini/AlRayan/Zensar Sandbox Full Components/src/objects/IT_Change_Task__c.object
<CustomObject>
    <fields>
        <fullName>Application__c</fullName>
        <label>Application</label>
        <picklist>
            <picklistValues>
                <fullName>CAA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NPAA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IVR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HPP CAA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standard Salesforce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IBB to MAR messaging</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Online Banking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DocuGen</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Assigned_to__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned to</label>
        <referenceTo>User</referenceTo>
        <relationshipName>IT_Change_Tasks1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Business_impact__c</fullName>
        <label>Business impact</label>
        <picklist>
            <picklistValues>
                <fullName>Critical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>Enhancement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Problem</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Audit issue: level A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Audit issue: level B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Audit issue: level C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal department finding</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Change_request_case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Change request case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>IT &amp; Change Tasks</relationshipLabel>
        <relationshipName>IT_Change_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_impact__c</fullName>
        <label>Customer impact</label>
        <picklist>
            <picklistValues>
                <fullName>Critical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Date_Completed__c</fullName>
        <label>Date Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Deployed__c</fullName>
        <label>Date Deployed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Started__c</fullName>
        <label>Date Started</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_required_by__c</fullName>
        <label>Date required by</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Development_environment__c</fullName>
        <label>Development environment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Estimated_Completion_Date__c</fullName>
        <label>Estimated Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>No_of_days_to_Complete__c</fullName>
        <formula>IF(ISBLANK(Date_Started__c), 


CASE(MOD( ( Date_Completed__c) - DATE(1985,6,24),7), 
0 , CASE( MOD( TODAY() - ( Date_Completed__c) ,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
1 , CASE( MOD( TODAY() - ( Date_Completed__c) ,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
2 , CASE( MOD( TODAY() - ( Date_Completed__c) ,7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
3 , CASE( MOD( TODAY() - ( Date_Completed__c) ,7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
4 , CASE( MOD( TODAY() - ( Date_Completed__c) ,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
5 , CASE( MOD( TODAY() - ( Date_Completed__c) ,7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
6 , CASE( MOD( TODAY() - ( Date_Completed__c) ,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 999) 
+ 
(FLOOR(( TODAY() - (Date_Completed__c) )/7)*5)-1 , 

CASE(MOD((Date_Started__c) - DATE(1985,6,24),7), 
0 , CASE( MOD(  Date_Completed__c - (Date_Started__c) ,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
1 , CASE( MOD(  Date_Completed__c - (Date_Started__c) ,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
2 , CASE( MOD(  Date_Completed__c - (Date_Started__c) ,7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
3 , CASE( MOD(  Date_Completed__c - (Date_Started__c) ,7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
4 , CASE( MOD(  Date_Completed__c - (Date_Started__c) ,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
5 , CASE( MOD(  Date_Completed__c - (Date_Started__c) ,7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
6 , CASE( MOD(  Date_Completed__c - (Date_Started__c) ,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
999) 
+ 
(FLOOR((  Date_Completed__c - (Date_Started__c) )/7)*5)-1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>No of days to Complete</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Previous_change_reference__c</fullName>
        <label>Previous change reference</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>IT &amp; Change Tasks</relationshipLabel>
        <relationshipName>IT_Change_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Raised_by__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Raised by</label>
        <referenceTo>User</referenceTo>
        <relationshipName>IT_Change_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sandbox__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sandbox</label>
        <referenceTo>Sandbox__c</referenceTo>
        <relationshipLabel>IT &amp; Change Tasks</relationshipLabel>
        <relationshipName>IT_Change_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Schedule_reference__c</fullName>
        <formula>Name &amp;&quot;: &quot;&amp; Title__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Schedule reference</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Application__c</fullName>
        <label>System</label>
        <picklist>
            <picklistValues>
                <fullName>SFDC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EBS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EBA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BizTalk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Voice Media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DHCP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Websense</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exchange</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Domain controller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MIMIX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Netapp</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SQL Server</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASP.Net</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>.Net</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Server</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IFM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed: Not actioned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deployed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Descoped</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In testing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ready for testing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scheduled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>To be defined</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>To be deployed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>To be scheduled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>With third party</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Task_Category__c</fullName>
        <label>Task Category</label>
        <picklist>
            <picklistValues>
                <fullName>Business Requirements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Functional Specification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Analysis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Testing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Process Analysis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Task_Derived_From__c</fullName>
        <label>Task Derived From</label>
        <picklist>
            <picklistValues>
                <fullName>SBC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Task_Priority__c</fullName>
        <label>Task Priority</label>
        <picklist>
            <picklistValues>
                <fullName>Very High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Very Low</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Task_Status__c</fullName>
        <label>Task Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Started</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Task Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Idea</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved project/CAT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Defined requirement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Defined error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Undefined error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ongoing tasks</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>IT &amp; Change Task</label>
    <listViews>
        <fullName>All</fullName>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>Title__c</columns>
        <columns>Category__c</columns>
        <columns>Project__c</columns>
        <columns>Date_required_by__c</columns>
        <columns>Assigned_to__c</columns>
        <columns>Development_environment__c</columns>
        <columns>Previous_change_reference__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Audit_actions</fullName>
        <columns>NAME</columns>
        <columns>Schedule_reference__c</columns>
        <columns>Category__c</columns>
        <columns>Assigned_to__c</columns>
        <columns>Status__c</columns>
        <columns>Date_required_by__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Category__c</field>
            <operation>contains</operation>
            <value>audit,internal</value>
        </filters>
        <label>Audit and Internal findings actions</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Deployed_Completed_Tasks</fullName>
        <columns>NAME</columns>
        <columns>Title__c</columns>
        <columns>Category__c</columns>
        <columns>Date_required_by__c</columns>
        <columns>Status__c</columns>
        <columns>Assigned_to__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>contains</operation>
            <value>Closed</value>
        </filters>
        <label>Closed Tasks</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinatesInternal>Head_of_IT_Change</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Development_list</fullName>
        <columns>NAME</columns>
        <columns>Title__c</columns>
        <columns>Category__c</columns>
        <columns>Type__c</columns>
        <columns>Service_Application__c</columns>
        <columns>Status__c</columns>
        <columns>Project__c</columns>
        <columns>Priority__c</columns>
        <columns>Date_required_by__c</columns>
        <columns>Assigned_to__c</columns>
        <columns>Customer_impact__c</columns>
        <columns>Business_impact__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>IT_Change_Task__c.Development_Tasks</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notContain</operation>
            <value>close</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notContain</operation>
            <value>cancelled</value>
        </filters>
        <label>Development list</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ISA</fullName>
        <columns>NAME</columns>
        <columns>Title__c</columns>
        <columns>Assigned_to__c</columns>
        <columns>Category__c</columns>
        <columns>Project__c</columns>
        <columns>Date_Started__c</columns>
        <columns>Date_required_by__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notContain</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>IT_Change_Task__c.Development_Tasks,IT_Change_Task__c.Change_Delivery_Tasks</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notContain</operation>
            <value>cancel</value>
        </filters>
        <filters>
            <field>Title__c</field>
            <operation>contains</operation>
            <value>ISA</value>
        </filters>
        <label>ISA</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>IT_Tasks</fullName>
        <columns>NAME</columns>
        <columns>Title__c</columns>
        <columns>Status__c</columns>
        <columns>Project__c</columns>
        <columns>Date_required_by__c</columns>
        <columns>Assigned_to__c</columns>
        <columns>Development_environment__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>IT_Change_Task__c.IT_Tasks</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <label>IT Tasks</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Kirsty_s_Tasks</fullName>
        <columns>NAME</columns>
        <columns>Title__c</columns>
        <columns>Description__c</columns>
        <columns>Status__c</columns>
        <columns>Priority__c</columns>
        <columns>Development_environment__c</columns>
        <columns>Sandbox__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Assigned_to__c</field>
            <operation>equals</operation>
            <value>abdul salam</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notContain</operation>
            <value>Closed,Cancelled</value>
        </filters>
        <label>Abdul&apos;s tasks</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinatesInternal>Head_of_IT_Change</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Lukes_Tasks</fullName>
        <columns>NAME</columns>
        <columns>Title__c</columns>
        <columns>Assigned_to__c</columns>
        <columns>Status__c</columns>
        <columns>Sandbox__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Assigned_to__c</field>
            <operation>contains</operation>
            <value>Luke</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Closed,Closed: Not actioned</value>
        </filters>
        <label>Lukes Tasks</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Problem_List</fullName>
        <columns>NAME</columns>
        <columns>Schedule_reference__c</columns>
        <columns>Date_required_by__c</columns>
        <columns>Status__c</columns>
        <columns>Assigned_to__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Category__c</field>
            <operation>equals</operation>
            <value>Problem</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Closed,Cancelled</value>
        </filters>
        <label>Problem List</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Sandboxes</fullName>
        <columns>NAME</columns>
        <columns>Title__c</columns>
        <columns>Status__c</columns>
        <columns>Sandbox__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sandbox__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Cancelled,Closed,Closed: Not actioned</value>
        </filters>
        <filters>
            <field>Development_environment__c</field>
            <operation>notContain</operation>
            <value>EBS,TBC,na,new</value>
        </filters>
        <filters>
            <field>Service_Application__c</field>
            <operation>equals</operation>
            <value>SFDC</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>IT_Change_Task__c.Development_Tasks</value>
        </filters>
        <label>Sandboxes</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>C{0000}</displayFormat>
        <label>IT &amp; Change Task Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>IT &amp; Change Tasks</pluralLabel>
    <recordTypes>
        <fullName>Change_Delivery_Tasks</fullName>
        <active>true</active>
        <description>All Business Analysis Tasks</description>
        <label>Business Analysis Tasks</label>
    </recordTypes>
    <recordTypes>
        <fullName>Development_Tasks</fullName>
        <active>true</active>
        <description>For use with all enhancements and problems relating to systems</description>
        <label>Development Tasks</label>
    </recordTypes>
    <recordTypes>
        <fullName>IT_Tasks</fullName>
        <active>true</active>
        <description>All IT tasks whether problems or enhancements</description>
        <label>IT Tasks</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>